--- a/.github/workflows/flow1.yml
+++ b/.github/workflows/flow1.yml
@@ -7,5 +7,15 @@ jobs:
       steps:
          -  name: Checkout repo
             uses: actions/checkout@v3
+         -  name: Install nodejs
+            uses: actions/setup-node@v3
+            with:
+               node-version: 20
+
+         -  name: Install dependencies
+            run: npm ci
+         -  name: run tests
+            run: npm test
+               
 
 
