--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,23 +1,24 @@
 {
+    "root": true,
     "env": {
-        "browser": true,
-        "es2021": true,
-        "node": true
+      "node": true,
+      "browser": true
     },
-    "extends": [
-        "eslint:recommended",
-        "plugin:@typescript-eslint/recommended",
-        "plugin:react/recommended"
-    ],
-    "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
+      "ecmaFeatures": {
+        "jsx": true
+      },
+      "ecmaVersion": "latest",
+      "sourceType": "module"
     },
-    "plugins": [
-        "@typescript-eslint",
-        "react"
-    ],
+    "extends": ["plugin:react/recommended", "plugin:react/jsx-runtime"],
     "rules": {
+      "react/react-in-jsx-scope": "off",
+      "semi": [2, "always"]
+    },
+    "settings": {
+      "react": {
+        "version": "detect"
+      }
     }
-}
+  }
