--- a/.github/workflows/flow1.yml
+++ b/.github/workflows/flow1.yml
@@ -16,6 +16,10 @@ jobs:
             run: npm ci
          -  name: run tests
             run: npm test
+         -  name: Lint
+            run: npm run lint
+         -  name: Build
+            run: npm run build
                
 
 
