--- a/.github/workflows/flow2.yml
+++ b/.github/workflows/flow2.yml
@@ -6,4 +6,4 @@ jobs:
       runs-on: ubuntu-latest
       steps:
          - name: report event
-           run: echo "${{github.event}}"
+           run: echo "${{toJson(github.event)}}"
